Gravity Base Implementation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/PlanetShooter")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="PlanetShooterGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/PlanetShooterGamemode.PlanetShooterGamemode_C
+EditorStartupMap=/Game/Maps/Default.Default
+GameDefaultMap=/Game/Maps/Default.Default
+
