--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=16C2A76F46B27CC9135DB79189396936
+CopyrightNotice="// Copyright Samuel Carriere 2021"
+
