--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Launch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Collect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
